# awn-data-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  backfill.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: broadcast.py  collector.py  config.py  converter.py  database.py  schemas.py  statistics.py
app/routes/: astronomy.py  daily.py  history.py  monthly.py  stream.py  yearly.py
docker/: entrypoint.sh
